<resources>
    <string name="app_name">Password keeper</string>
    <string name="password_button_text">Passwords</string>
    <string name="notes_button_text">Notes</string>
    <string name="Resource_name">Resource name</string>
    <string name="esource_name">esource name</string>
    <string name="R">R</string>
    <string name="Login">Login</string>
    <string name="login">login</string>
    <string name="Password">Password</string>
    <string name="password">password</string>
    <string name="password_question">password?</string>
    <string name="password_saved">password saved</string>
    <string name="back_button_text">Back</string>
    <string name="change_button_text">Change</string>
    <string name="delete_button_text">Delete</string>
    <string name="enter_button_text">Enter</string>
    <string name="enter_key_hint">Enter key kode</string>
    <string name="new_password">New password</string>
    <string name="save_button_text">Save</string>
    <string name="chancel_button_text">Cancel</string>
    <string name="copied">copied</string>
    <string name="Need_to_fill_all_fields">Need to fill all fields</string>
    <string name="Save">Save</string>
    <string name="Generate">Generate</string>
    <string name="Delete">Delete</string>
    <string name="Cancel">Cancel</string>
    <string name="Back">Back</string>
    <string name="Enter_resource_name">Enter resource name</string>
    <string name="Enter_login">Enter login</string>
    <string name="Note">Note</string>
    <string name="add_new_password">+ add new password</string>
    <string name="Date">Date</string>
    <string name="last_changed">"Last changed: "</string>
    <string name="Warning">Warning!</string>
    <string name="This_password_will_be_deleted">This password will be deleted!</string>
    <string name="access_denied">******</string>
    <string name="Backup_is_successful_to_SD_card">Backup is successful saved! \n You can find it: \"Documents/Password keeper/keeper_backup.db</string>
    <string name="Backup">Backup</string>
    <string name="load">Load</string>
    <string name="settings">Settings</string>
    <string name="change_main_password">Change main password</string>
    <string name="enter_old_password">Enter old Password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="change_password_denied">Your old password is wrong!!! Change main password impossible!!!</string>
    <string name="set_time_before_leave">Set time before leave</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Do_you_really_want_to_delete">Do you really want to delete</string>
    <string name="fill_some_text">----------------------</string>
    <string name="Get_token">Get token</string>
    <string name="Enter_token">Enter token</string>
    <string name="enter_token_hint">Enter token</string>
    <string name="Save_and_send_database">Save and send database</string>
    <string name="Token_was_successfully_updated">Token was successfully updated!!!</string>
    <string name="Backup_is_successful_to_phone_storage">Backup is successfull to phone storage!</string>
    <string name="File_successfully_added_to_dropbox">File successfully sent to dropbox!</string>
    <string name="Something_went_wrong_file_does_not_saved">Something went wrong file does not saved</string>
    <string name="enter_password_length_hint">Enter password length</string>
    <string name="Password_length">Password length:</string>
    <string name="Save_password_length">Save password length</string>
    <string name="Load_database">Load database</string>
    <string name="number">999</string>
    <string name="Do_you_really_want_to_discard">Do you really want to discard</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
</resources>