<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_container"
    android:tag="Password_card_tag"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/password_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">




        <LinearLayout
        android:id="@+id/password_fragment_inner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="8dp"
        >


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:passwordToggleEnabled="false"
            app:fontFamily="@font/roboto_mono_regular"
            style="@style/passwordCardStyleMonoSpace">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/resource_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:focusable="true"
                android:hint="@string/Resource_name"
                android:inputType="text"
                android:maxLines="1"
                style="@style/passwordCardStyleMonoSpace"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:passwordToggleEnabled="true"
            style="@style/passwordCardStyleMonoSpace">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/login_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:focusable="true"
                android:hint="@string/Login"
                android:inputType="textPassword"
                android:maxLines="1"
                style="@style/passwordCardStyleMonoSpace"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:passwordToggleEnabled="true"
            style="@style/passwordCardStyleMonoSpace"
            >

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/password_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:focusable="true"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:maxLines="1"
                style="@style/passwordCardStyleMonoSpace"/>


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:passwordToggleEnabled="false"
            style="@style/passwordCardStyleMonoSpace">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/note_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:focusable="true"
                android:hint="@string/Note"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLines="7"
                style="@style/passwordCardStyleMonoSpace"/>


        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/last_changed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/last_changed" />

            <TextView
                android:id="@+id/date_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:padding="8dp"
                android:text="@string/Date" />

        </LinearLayout>





    </LinearLayout>


    </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/back_button_fp"
            android:layout_height="64dp"
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/back_button_text" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/change_button_fp"
            android:layout_height="64dp"
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/change_button_text" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/delete_button_fp"
            android:layout_height="64dp"
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/delete_button_text" />



    </LinearLayout>

</FrameLayout>