<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/change_password_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/deep_blue"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    style="@style/ChangeWindowTheme"

    >


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:passwordToggleEnabled="true">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/new_password_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:focusable="true"
            android:hint="@string/enter_new_password"
            android:inputType="textPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:passwordToggleEnabled="true">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/confirm_new_password_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:focusable="true"
            android:hint="@string/confirm_new_password"
            android:inputType="textPassword"
            android:maxLines="1" />


    </com.google.android.material.textfield.TextInputLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/chancel_change_password"
            android:layout_height="64dp"
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/Cancel" />



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/agree_change_button"
            android:layout_height="64dp"
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/Save" />


    </LinearLayout>


</LinearLayout>

</LinearLayout>